2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Reverting 6515 changes since the temporary schedule items will likely crash
		during chunk cache out (Avatar death is a good example).

2010-12-10 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Actors.cc: Npcs do not heal hourly if poisoned. If in the party, they also don't heal if
		starving or freezing. Overheating in SI is not checked since overheating is handled by
		usecode function 0x6AF.
	* keyactions.cc: I fixed fullscreen toggle for OpenGL.
	* defaultkeys.txt: Alt-V (Cmd-V) is now an alternate key to create last shape due to newer
		Apple Macintosh keyboards lacking the insert key.

2010-12-10 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.*: Added checks in Talk_schedule::now_what so the npcs doesn't item_say if the
		Avatar is unreachable. Changed costs in baking schedule to help prevent failures.
		Changed baking schedule so that the display table is cleared of food before getting full.
		It needs some further pathfinding added to each food item cleared since it currently only
		walks to the table.
		
2010-12-09 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc, gamewin.*, objs/eggs.cc, usecode/intrinsics.cc: Added a check
		to make sure party members don't teleport with teleport_party if paralyzed, or asleep.
		Added an optional parameter for teleport_party, teleport_to_saved_pos, move_object,
		and recall_virtue_stone to override the check. Teleport cheats don't use the check.
		Changed Actor::follow so that paralyzed or asleep actors don't follow. This fixes bug #2799398.
	* added  cmanip.exe, mockup.exe, smooth.exe, and u7voice2syx.exe to the trunk's svn:ignore

2010-12-09 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.cc: Make more schedule created items temporary
	* added Exult.exe to the trunk's svn:ignore

2010-12-09 Dominik Reichardt <dominus@users.sourceforge.net>